@@ -38,6 +38,8 @@ softdtmf=on      ;enable/disable software dtmf detection, recommended for AVM ca
 relaxdtmf=on     ;in addition to softdtmf, you can use relaxed dtmf detection
 faxdetect=off    ;enable faxdetection and redirection to EXTEN 'fax' for incoming and/or
                  ;outgoing calls. (default='off', possible values: 'incoming','outgoing','both')
+faxdetecttime=0  ;Only detect faxes during the first 'n' seconds of the call.
+                 ;(default '0' meaning for the whole duration of the call)
 accountcode=     ;PBX accountcode to use in CDRs
 ;amaflags=default;AMA flags for CDR ('default', 'omit', 'billing', or 'documentation')
 context=isdn-in  ;context for incoming calls
